<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="8sp"
            android:text="@string/flags_remaining_label"
            android:textSize="20sp" />

        <Space
            android:layout_width="70sp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnReset"
            android:padding="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_label"/>

    </LinearLayout>

    <com.example.minesweeper.MinesweeperView
        android:id="@+id/minesweeperView"
        android:layout_width="350dp"
        android:layout_height="350dp" />

    <ToggleButton
        android:id="@+id/interactionToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/reveal_label"
        android:textOn="@string/flag_label"/> <!--text to be displayed whenever toggle button is checked-->

</LinearLayout>